--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,8 @@ name = "counts"
 crate-type = ["cdylib"]
 
 [dependencies]
+polars = "0.32.1"
+polars-core = "0.32.1"
 pyo3 = "0.19.0"
+pyo3-polars = "0.6.0"
 rayon = "1.7.0"
